# Vector_search_awards

./: .dockerignore  CLOUD_RUN_GITHUB_DEPLOY.md  CLOUD_RUN_SETUP_COMPLETE.md  DEPLOYMENT_QUICKSTART.md  Dockerfile  PROJECT_TIMELINE.csv  README.md  cloudbuild.yaml  delete.ipynb  doe_test_suite.py  pyproject.toml  reindex_doe.py  requirements.txt  test_doe_semantic.py  validation_report.json  validation_report.txt
config/: env.example  env.production.template
docs/: CLOUD_RUN_DEPLOYMENT.md  COMPLETE_MANUAL.md
scripts/: create_schema.py  create_schema.sql  delete_schema.py  deploy.sh  deploy_localtunnel.sh  deploy_ngrok.sh  diagnose_validation_issues.py  diagnostic_results.json  index_data.py  load_csv_to_supabase.py  setup_cloudrun.sh  test_complex_queries.py  test_openai_embeddings.py  validation_benchmark.py  validation_report.json  validation_report.txt
src/api/: app.py
src/api/middleware/: logging.py
src/api/routes/: __init__.py  health.py  indexing.py  search.py
src/core/: config.py  logging.py  startup.py
src/core/models/: search.py
src/core/search/: __init__.py  deduplication.py  hybrid_search.py  lexical.py  ranking.py  semantic.py
src/database/: connection.py  pgvector.py  supabase.py
src/indexing/: chunking.py  embeddings.py  embeddings_sentence_transformers.py  incremental.py  pipeline.py
src/indexing/jobs/: backfill.py  update.py
src/utils/: helpers.py
static/: app.js  index.html  styles.css
