[project]
name = "sbir-search-engine"
version = "1.0.0"
description = "SBIR Vector Search Engine with SciBERT embeddings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # ==================== Core Framework ====================
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    # ==================== Database ====================
    "supabase",
    "psycopg2-binary",
    # ==================== Embeddings ====================
    # Sentence Transformers (default, for scientific domain embeddings - FREE)
    "sentence-transformers",
    # ==================== Text Processing ====================
    # LangChain text splitters (for chunking)
    "langchain-text-splitters",
    # ==================== Utilities ====================
    "python-dotenv",
    "numpy",
    "openai>=2.15.0",
]

[project.optional-dependencies]
# OpenAI (optional, only if using OpenAI embeddings instead)
openai = [
    "openai",
    "tiktoken",
]

# Qdrant (optional, only if using Qdrant instead of pgvector)
qdrant = [
    "qdrant-client>=1.7.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
# Command line scripts
create-schema = "scripts.create_schema:main"
index-data = "scripts.index_data:main"
load-csv = "scripts.load_csv_to_supabase:main"
doe-test = "doe_test_suite:main"
